--- a/styles.css
+++ b/styles.css
@@ -34,11 +34,7 @@ a {
   align-items: center;
   width: 100%;
   height: 100vh;
-  background: linear-gradient(
-    45deg,
-    rgb(154,154,154),
-    rgb(112,112,112)
-  )
+  background: rgb(26, 26, 46);
 }
 
 #welcome-header {
@@ -70,6 +66,7 @@ ul {
   top: 0;
   left: 0;
   width: 100%;
+  background: ;
 }
 
 #nav-list {
@@ -137,11 +134,7 @@ ul {
 
 .projects {
   padding: 8rem 3rem;
-  background: linear-gradient(
-    45deg,
-    rgb(154,154,154),
-    rgb(112,112,112)
-  )
+  background: rgb(15, 52, 96)
 }
 
 #projects h2 {
@@ -170,20 +163,58 @@ ul {
   font-size: 3rem;
 }
 
+#contact {
+  padding: 8rem 3rem;
+  height: 20%;
+  background: rgb(22, 33, 62);
+}
+
+#contact h2 {
+  font-size: 3.8rem;
+  color: white;
+  margin-bottom: 3rem;
+}
+
 #contacts-list {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  grid-gap: 4rem;
+  display: flex;
+  justify-content: center;
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
   margin-bottom: 6rem;
 }
 
+.profile-link {
+  border-radius: 10px;
+}
+
+.button {
+  color: white;
+  font-size: 3rem;
+}
+
+#linkedin {
+  background: #0072b1;
+  border-radius: 10px;
+  padding: 1rem;
+  margin-right: 5rem;
+}
+
+#twitter {
+  background: #1DA1F2;
+  border-radius: 10px;
+  padding: 1rem;
+  margin-right: 5rem;
+}
+
+#email {
+  background: green;
+  border-radius: 10px;
+  padding: 1rem;
+  margin-right: 5rem;
+}
+
 footer {
   background-color: black;
   color: rgb(255,255,242)
 }
-
-** end of undefined **
-
