--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,13 @@ ul {
 
 #nav-list a:hover {
   background:  rgb(128,0,0);
+  border-radius: 0 0 10% 10%;
+}
+
+#CV a:hover {
+  background: white;
+  color: maroon;
+  border-radius: 0 0 10% 10%;
 }
 
 #CV {
@@ -176,15 +183,14 @@ ul {
 }
 
 #contacts-list {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  max-width: 1280px;
-  margin: 0 auto;
+  text-align: center;
   margin-bottom: 6rem;
 }
 
 .profile-link {
+  display: inline-block;
+  width: 10%;
+  margin: 0 2.5% 0 2.5%;
   border-radius: 10px;
 }
 
@@ -197,21 +203,18 @@ ul {
   background: #0072b1;
   border-radius: 10px;
   padding: 1rem;
-  margin-right: 5rem;
 }
 
 #twitter {
   background: #1DA1F2;
   border-radius: 10px;
   padding: 1rem;
-  margin-right: 5rem;
 }
 
 #email {
   background: green;
   border-radius: 10px;
   padding: 1rem;
-  margin-right: 5rem;
 }
 
 footer {
