--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-:root {
-
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -40,19 +36,41 @@ a {
 #welcome-header {
   display: inline-block;
   text-align: center;
-  font-size: 4rem;
-  margin-bottom: 50px;
+  font-size: 6rem;
   width: 30%;
   top: 50%;
-  background-color:  	rgba(128,0,0, 1);
-  border-radius: 30px;
   padding: 50px;
-  box-shadow: 0px 10px 10px darkgray;
   color: rgb(255,255,242)
 }
 
 #welcome-header h1 {
   font-weight: bold;
+}
+
+#resume {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 15%;
+  height: 6%;
+  background: maroon;
+  margin-bottom: 50px;
+  border-radius: 10px;
+}
+
+#resume-link {
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: white;
+  font-size: 4rem;
+  padding-top: 4%;
+}
+
+#resume a:hover {
+  background: white;
+  color: maroon;
+  border-radius: 10px;
 }
 
 ul {
@@ -71,7 +89,10 @@ ul {
 
 #nav-list {
   display: flex;
-  margin-right:;
+}
+
+.nav-option {
+  margin-left: 2rem;
 }
 
 #nav-list a {
@@ -84,18 +105,15 @@ ul {
 
 #nav-list a:hover {
   background:  rgb(128,0,0);
-  border-radius: 0 0 10% 10%;
 }
 
 #CV a:hover {
   background: white;
   color: maroon;
-  border-radius: 0 0 10% 10%;
 }
 
 #CV {
   background: rgb(128,0,0);
-  border-radius: 0 0 10% 10%;
 }
 
 #welcome-video h2 {
@@ -104,7 +122,6 @@ ul {
 }
 
 #welcome-video iframe {
-  box-shadow: 0px 10px 10px lightgray;
   height: 427px;
   width: 760px;
 }
@@ -138,7 +155,7 @@ ul {
   background: rgba(128, 0,0,0.8);
   border-radius: 10px;
   color: white;
-  font-size: 2.5rem;
+  font-size: 3rem;
 }
 
 .project-tile:hover {
@@ -187,10 +204,20 @@ ul {
   padding: 1rem;
 }
 
+#linkedin:hover {
+  scale: 1.2;
+  opacity: 0.8;
+}
+
 #twitter {
   background: #1DA1F2;
   border-radius: 10px;
   padding: 1rem;
+}
+
+#twitter:hover {
+  scale: 1.2;
+  opacity: 0.8;
 }
 
 #email {
@@ -199,7 +226,13 @@ ul {
   padding: 1rem;
 }
 
+#email:hover {
+  scale: 1.2;
+  opacity: 0.8;
+}
+
 footer {
-  background-color: black;
-  color: rgb(255,255,242)
+  background-color: rgb(22, 33, 62);
+  color: rgb(255,255,242);
+  padding: 1rem;
 }
