--- a/styles.css
+++ b/styles.css
@@ -227,3 +227,61 @@ footer {
   color: rgb(255,255,242);
   padding: 1rem;
 }
+@media only screen and (max-width: 880px) {
+  
+  #navbar {
+    background: rgb(26, 26, 46);
+  }
+  
+  .profile-link {
+    display: inline-block;
+    width: 50%;
+    margin: 2.5% 0 2.5%;
+    border-radius: 10px;
+  }
+  
+  #welcome-header {
+    display: inline-block;
+    text-align: center;
+    font-size: 4rem;
+    width: 50%;
+    top: 50%;
+    margin: 0 auto;
+    padding-top: 25%;
+    padding-bottom: : 10%;
+    color: rgb(255,255,242)
+  }
+  
+  #welcome-header h1 {
+    margin-block: auto;
+    text-align: center;
+  }
+  
+  #welcome-video {
+    height: 80%;
+    width: 80%;  
+    padding: 0%;
+    margin: 10%;
+  }
+  
+  #welcome-video iframe {
+    height: 100%;
+    width: 100%;
+  }
+  
+  #resume {
+    height: auto;
+    width: 40%;
+  }
+  
+  #resume-link {
+    width: 100%;
+    height: 100%;
+    font-size: 4rem;
+  }
+  
+  #nav-list a {
+    font-size: 2rem;
+  }
+  
+}
