--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ a {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: 110vh;
   background: rgb(26, 26, 46);
 }
 
@@ -37,7 +37,7 @@ a {
   display: inline-block;
   text-align: center;
   font-size: 6rem;
-  width: 30%;
+  width: 40%;
   top: 50%;
   padding: 50px;
   color: rgb(255,255,242)
@@ -84,7 +84,7 @@ ul {
   top: 0;
   left: 0;
   width: 100%;
-  background: ;
+  background:rgb(26, 26, 46);
 }
 
 #nav-list {
@@ -107,6 +107,15 @@ ul {
   background:  rgb(128,0,0);
 }
 
+#CV a:hover {
+  background: white;
+  color: maroon;
+}
+
+#CV {
+  background: rgb(128,0,0);
+}
+
 #welcome-video h2 {
   font-size: 4rem;
   color: white;
@@ -125,7 +134,7 @@ ul {
 #projects h2 {
   font-size: 3.8rem;
   color: white;
-  margin-bottom: 3rem;
+  margin-bottom: 8rem;
 }
 
 #projects-list {
@@ -135,7 +144,6 @@ ul {
   width: 100%;
   max-width: 1280px;
   margin: auto;
-  margin-bottom: 6rem;
 }
 
 .project-tile {
@@ -155,8 +163,20 @@ ul {
   border-radius: 10px;
 }
 
+#blog {
+  background: rgb(26, 26, 46);
+  color: white;
+  font-size: 1.5rem;
+  padding: 5rem;
+}
+
+#blogheader {
+  font-size: 3.8rem;
+  padding-bottom: 3rem;
+}
+
 #contact {
-  padding: 8rem 3rem;
+  padding: 5rem 3rem;
   height: 20%;
   background: rgb(22, 33, 62);
 }
@@ -164,7 +184,7 @@ ul {
 #contact h2 {
   font-size: 3.8rem;
   color: white;
-  margin-bottom: 3rem;
+  margin-bottom: 5rem;
 }
 
 #contacts-list {
@@ -174,7 +194,7 @@ ul {
 
 .profile-link {
   display: inline-block;
-  width: 10%;
+  width: 11%;
   margin: 0 2.5% 0 2.5%;
   border-radius: 10px;
 }
@@ -182,6 +202,7 @@ ul {
 .button {
   color: white;
   font-size: 3rem;
+  border-radius: 10px;
 }
 
 .buttontext {
@@ -191,7 +212,6 @@ ul {
 
 #linkedin {
   background: #0072b1;
-  border-radius: 10px;
   padding: 1rem;
 }
 
@@ -202,7 +222,6 @@ ul {
 
 #twitter {
   background: #1DA1F2;
-  border-radius: 10px;
   padding: 1rem;
 }
 
@@ -213,7 +232,6 @@ ul {
 
 #email {
   background: green;
-  border-radius: 10px;
   padding: 1rem;
 }
 
@@ -222,66 +240,30 @@ ul {
   opacity: 0.8;
 }
 
+#YT {
+  background: red;
+  padding: 1rem;
+}
+
+#YT:hover {
+  scale: 1.2;
+  opacity: 0.8;
+}
+
+#goodreads {
+  background:	#EADDCA;
+  color: #8B4513;
+  padding: 1rem 0rem;
+}
+
+#goodreads:hover {
+  scale: 1.2;
+  opacity: 0.8;
+}
+
 footer {
   background-color: rgb(22, 33, 62);
   color: rgb(255,255,242);
-  padding: 1rem;
-}
-@media only screen and (max-width: 880px) {
-  
-  #navbar {
-    background: rgb(26, 26, 46);
-  }
-  
-  .profile-link {
-    display: inline-block;
-    width: 50%;
-    margin: 2.5% 0 2.5%;
-    border-radius: 10px;
-  }
-  
-  #welcome-header {
-    display: inline-block;
-    text-align: center;
-    font-size: 4rem;
-    width: 50%;
-    top: 50%;
-    margin: 0 auto;
-    padding-top: 25%;
-    padding-bottom: : 10%;
-    color: rgb(255,255,242)
-  }
-  
-  #welcome-header h1 {
-    margin-block: auto;
-    text-align: center;
-  }
-  
-  #welcome-video {
-    height: 80%;
-    width: 80%;  
-    padding: 0%;
-    margin: 10%;
-  }
-  
-  #welcome-video iframe {
-    height: 100%;
-    width: 100%;
-  }
-  
-  #resume {
-    height: auto;
-    width: 40%;
-  }
-  
-  #resume-link {
-    width: 100%;
-    height: 100%;
-    font-size: 4rem;
-  }
-  
-  #nav-list a {
-    font-size: 2rem;
-  }
-  
+  padding-top: 6rem;
+  padding-bottom: 2rem;
 }
