--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%;
+  font-size: 100%;
   scroll-behavior: smooth;
 }
 
@@ -30,19 +30,19 @@ a {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 110vh;
+  height: 120lvh;
   background: rgb(26, 26, 46);
 }
 
 #welcome-header {
   display: inline-block;
   text-align: center;
-  font-size: 6lvh;
+  font-size: 300%;
   width: 100%;
   top: 0;
-  padding: 0;
   color: rgb(255,255,242)
 }
+
 
 #welcome-header h1 {
   font-weight: bold;
@@ -65,7 +65,7 @@ a {
   height: 100%;
   text-decoration: none;
   color: white;
-  font-size: 4rem;
+  font-size: 300%;
   align-items: center;
   display: flex;
   justify-content: center;
@@ -96,16 +96,12 @@ ul {
   display: flex;
 }
 
-.nav-option {
-  margin-left: 2rem;
-}
-
 #nav-list a {
   display: block;
-  font-size: 2.5rem;
+  font-size: 175%;
   text-decoration: none;
   color: white;
-  padding: 2.2rem;
+  padding: 1rem;
 }
 
 #nav-list a:hover {
@@ -132,12 +128,12 @@ ul {
 }
 
 .projects {
-  padding: 8rem 3rem;
+  padding: 8rem 5%;
   background: rgb(15, 52, 96)
 }
 
 #projects h2 {
-  font-size: 3.8rem;
+  font-size: 300%;
   color: white;
   margin-bottom: 8rem;
 }
@@ -159,7 +155,7 @@ ul {
   background: rgba(128, 0,0,0.8);
   border-radius: 10px;
   color: white;
-  font-size: 3rem;
+  font-size: 250%;
 }
 
 .project-tile:hover {
@@ -171,42 +167,49 @@ ul {
 #blog {
   background: rgb(26, 26, 46);
   color: white;
-  font-size: 1.5rem;
-  padding: 5rem;
+  font-size: 100%;
+  padding-top: 3rem;
 }
 
 #blogheader {
-  font-size: 3.8rem;
+  font-size: 300%;
   padding-bottom: 3rem;
 }
 
 #contact {
-  padding: 5rem 3rem;
+  padding: 5rem 5%;
   height: 20%;
   background: rgb(22, 33, 62);
 }
 
 #contact h2 {
-  font-size: 3.8rem;
+  font-size: 300%;
   color: white;
   margin-bottom: 5rem;
 }
 
 #contacts-list {
-  text-align: center;
-  margin-bottom: 6rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-gap: 4rem;
+  width: 100%;
+  max-width: 1280px;
+  margin: auto;
 }
 
 .profile-link {
-  display: inline-block;
-  width: 11%;
-  margin: 0 2.5% 0 2.5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 8rem;
   border-radius: 10px;
+  color: white;
+  font-size: 250%;
 }
 
 .button {
   color: white;
-  font-size: 1rem;
+  font-size: 100%;
   border-radius: 10px;
 }
 
@@ -216,6 +219,7 @@ ul {
 
 
 #linkedin {
+  width: 100%;
   background: #0072b1;
   padding: 1rem;
 }
@@ -226,6 +230,7 @@ ul {
 }
 
 #twitter {
+  width: 100%;
   background: #1DA1F2;
   padding: 1rem;
 }
@@ -236,6 +241,7 @@ ul {
 }
 
 #email {
+  width: 100%;
   background: green;
   padding: 1rem;
 }
@@ -246,6 +252,7 @@ ul {
 }
 
 #YT {
+  width: 100%;
   background: red;
   padding: 1rem;
 }
@@ -256,6 +263,7 @@ ul {
 }
 
 #goodreads {
+  width: 100%;
   background:	#EADDCA;
   color: #8B4513;
   padding: 1rem 0rem;
@@ -269,6 +277,25 @@ ul {
 footer {
   background-color: rgb(22, 33, 62);
   color: rgb(255,255,242);
-  padding-top: 6rem;
   padding-bottom: 2rem;
+}
+
+@media (max-height: 700px) {
+  .welcome-section {
+    padding-top: 20lvh
+  }
+  #resume-link {
+    font-size: 200%
+  }
+  
+}
+
+@media (max-width: 500px) {
+  #welcome-video iframe {
+  height: 40lvh;
+  width: 100lvw;
+}
+  #contacts-list {
+    grid-gap: 0
+  }
 }
